--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,4 +12,7 @@ dependencies = [
     "sentence-transformers>=3.4.1",
     "torch>=2.6.0",
     "accelerate>=0.26.0",
+    "torchvision>=0.21.0",
+    "nltk>=3.9.1",
+    "xgboost>=3.0.0",
 ]
