feat: move models to models dir and add data aug

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,4 +15,8 @@ dependencies = [
     "torchvision>=0.21.0",
     "nltk>=3.9.1",
     "xgboost>=3.0.0",
+    "googletrans>=4.0.2",
+    "gensim>=4.3.3",
+    "numpy==1.26.4",
+    "scipy==1.15.2",
 ]
