--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,7 @@ dependencies = [
     "peft>=0.15.1",
     "transformers>=4.49.0",
     "plotly>=6.0.1",
+    "matplotlib>=3.10.1",
 ]
 
 [[tool.uv.index]]
