--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,7 @@ dependencies = [
     "jinja2>=3.1.6",
     "plotly>=6.0.1",
     "matplotlib>=3.10.1",
+    "cloudpickle>=3.1.1",
 ]
 
 [[tool.uv.index]]
